--- a/jp/clinical-trial-1.qmd
+++ b/jp/clinical-trial-1.qmd
@@ -170,10 +170,10 @@ a:hover {
 私「真面目に論文を読んでるんだけど、細かいところがよくわかんないんだ。特に統計っぽい言葉の意味がね。ちょっとこの図を見てよ。JCOG9502っていう胃がん手術の術式を比べた臨床試験の論文なの（Sasako, et al. 2006）。TH群は開腹創から下縦隔へアプローチする標準的な手術を受けた患者、LTA群は左開胸開腹連続切開によって下縦隔郭清も行った患者のことね」
 :::
 
-![](clinical-trial-2.png)
+![](clinical-trial-1.png)
 
 ::: voice-father
-お父さん「この図は、統計学でいうKaplan-Meier曲線 だよ。図AがOS、図BがDFSだね。どちらの図でも、TH群（青の曲線）よりLTA群（赤の曲線）の方が下にある。つまりTH群の方が、治療成績がいい」
+お父さん「この図は、いわゆるKaplan-Meier曲線だよ。図AがOS、図BがDFSだね。どちらの図でも、TH群（青の曲線）よりLTA群（赤の曲線）の方が下にある。つまりTH群の方が、治療成績がいい」
 :::
 
 ::: voice-daughter
@@ -232,176 +232,29 @@ a:hover {
 お父さん「ハザード比、95%信頼区間、片側p値、両側p値かな。このあたりの指標は、生存時間解析の定番だよ。ハザード比、95%信頼区間、両側p値は、Cox回帰という回帰モデルを当てはめて推定する。片側p値は手で計算する必要があるけど」
 :::
 
-::: {.callout-note title="coxph()を用いたハザード比の推定"}
-ハザード比を推定する方法はいくつかありますが、もっともポピュラーなのは`survival`パッケージの`coxph()`です。以前のデモで、関数generate_data(hr1, hr2)を用いて、ストーマの有無やOSのデータを生成しました。今回は同じデータにCox回帰を当てはめ、ストーマあり群とストーマなし群のハザード比を計算してみます。この関数では、死亡ハザード比の真値はhr2という引数で指定できます。
-
-```{r echo=FALSE, warning=FALSE}
-generate_data <- function(n=200, hr1, hr2) {
-  stoma <- rbinom(n, size = 1, prob = 0.4)
-  sex <- rbinom(n, size = 1, prob = 0.5)
-  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
-  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # 再発のハザード（大きいほど早く起こる）
-  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # 死亡のハザード（大きいほど早く起こる）
-  hazard_censoring <- 0.05                               # 打ち切りハザード（群に依存しない）
-  
-  t_relapse   <- rexp(n, rate = hazard_relapse)   # 再発までの潜在時間
-  t_death     <- rexp(n, rate = hazard_death)     # 死亡までの潜在時間
-  t_censoring <- rexp(n, rate = hazard_censoring) # 打ち切りまでの潜在時間
-  
-  ## --- 全生存期間（OS） ----------------------------------------
-  time_os   <- pmin(t_death, t_censoring)
-  status_os <- as.integer(t_death <= t_censoring)  # 1 = 死亡, 0 = 打ち切り
-  
-  ## --- 無再発存期間（RFS） -------------------------------------
-  time_rfs <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_rfs <- integer(n)
-  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # 再発
-  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # 死亡
-  
-  ## --- 累積再発率（CIR） + 競合リスク --------------------------
-  time_cir <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_cir <- integer(n)
-  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # イベント1: 再発
-  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # イベント2: 競合リスクとしての死亡
-  
-  ## --- データフレームにまとめる --------------------------------
-  dat <- data.frame(
-    id         = 1:n,
-    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
-    age        = age,
-    stoma      = factor(stoma, levels = c(0, 1),
-                        labels = c("WITHOUT STOMA", "WITH STOMA")),
-    time_os    = time_os,
-    status_os  = status_os,
-    time_rfs   = time_rfs,
-    status_rfs = status_rfs,
-    time_cir   = time_cir,
-    status_cir = status_cir
-  )
-}
-```
-
-```{r warning=FALSE}
-# install.packages("survival") #インストールが必要なら実行
-library(survival)
-dat <- generate_data(hr1=2, hr2=1.5) #再発ハザード比2, 死亡ハザード比1.5のデータ生成
-fit <- coxph(Surv(time_os, status_os) ~ stoma, data = dat)
-summary(fit)
-```
-:::
-
-
 ::: voice-daughter
-私「ハザード比とp値は知ってる。ハザード比は、TH群が基準になってて、ハザード比が1より小さいとき、TH群よりLTA群の方がOSやDFSがいいってこと？p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
+私「ふむふむ。こういうの同僚の研究でもよく出てくるんだ、ハザード比とか。もう少し詳しく知りたいな」
 :::
 
-::: voice-father
-お父さん「そういうことだね。ハザードはイベント/観察人年で求める“率”で、ハザード比はその2群間の“比”だから。似たような指標のオッズ比やリスク比は、時間経過を考慮しないから、生存時間解析には使われない。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）」
-:::
-
-::: voice-daughter
-私「p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
-:::
-
-::: voice-father
-お父さん「大まかな理解はあってるけど、p値の正確な意味は誤解されてることが多いんだよ。 p値 に関する説明をいくつかしてみようか。
-
-1.  p値は帰無仮説が正しい確率である
-2.  p値が小さく、統計学的に有意であることは、科学的に重要な知見が得られたことを意味する
-3.  統計学的に有意でない結果は、帰無仮説が正しいので採択すべきであることを意味する
-
-お父さん「JCOG9502の場合、帰無仮説は”LTA群の全生存曲線は、TH群の全生存曲線と等しい”ってことだよ。まず1について聞くけど、JCOG9502のp値は、”LTA群とTH群に生存曲線に差がない確率”を意味すると思う？」
-:::
-
-::: voice-daughter
-私「それでいいんじゃない？」
-:::
-
-::: voice-father
-お父さん「さっきの生存曲線を見ると、差がある確率より、差がない確率の方が高そうだもの。ここではね、もう少し厳密に考えてみてほしいんだ。“LTA群とTH群に生存曲線に差がない”っていう命題や仮説は、確率変数かな？確率変数ではないよね。命題は、正しいかどうかのどちらかしかないもの。確率変数ではないのに、確率が定義されるのは学問的におかしい」
-:::
-
-::: voice-daughter
-私「はーん。そういう理屈っぽいことが言いたかったわけね。じゃあそういう言い回しはやめます」
-:::
-
-::: voice-father
-お父さん「うんうん。じゃあ別の次の説明をして見てみよう。p値が小さいことは、“科学的に重要な知見が得られたこと”を意味すると思う？」
-:::
-
-::: voice-daughter
-私「普通そう考えるんじゃない？」
-:::
-
-::: voice-father
-お父さん「でもさっきの図のp値を見てよ。p=0.15からp=0.92まで4つのp値が示されているけど、どれも小さくはないでしょ」
-:::
-
-::: voice-daughter
-私「うん」
-:::
-
-::: voice-father
-お父さん「じゃあ科学的に重要じゃないってこと？」
-:::
-
-::: voice-daughter
-私「そういう意味で言ったわけじゃないけど」
-:::
-
-::: voice-father
-お父さん「だよね。p値が小さい方が重要な研究結果だって考えがちだけど、それははっきりとした間違いだと考えてください。論文を読むとき、p値に注目すると見方が偏ってしまう」
-:::
-
-::: voice-daughter
-私「はいはい。お父さん、話長くない？」
-:::
-
-::: voice-father
-お父さん「もう最後にするよ。説明3の“統計学的に有意でない結果は、帰無仮説が正しいので採択すべきであることを意味する”についてはどう？これは正しいかな？」
-:::
-
-::: voice-daughter
-私「教科書かなにかで、p値は、仮説を棄却するためのもので、採択しちゃだめって読んだ気がする。この最後の説明も、やっぱり間違いなんでしょ。でもさ、実際問題として、有意差がつかなかったらどうなるの？たとえば実薬AとBを比較する臨床試験だったとして、AとBの効果は同等と結論に書いていいの？」
-:::
-
-::: voice-father
-お父さん「それはルール違反だよ。この問いは、そういう間違いをさせないために出したんだ。帰無仮説が正しいことは、AとBの効果は同等っていう意味になるけど、有意差がないからって、それを採択してはいけない。“同等”や“劣らない”という結論を出すには、同等性 （equivalence）試験や非劣性 （non-inferiority）試験を組む必要がある」
-:::
-
-::: voice-daughter
-私「ふーん。そんなことわざわざやるかなあ。統計学は“有意差がないこと”と“同等”の区別にうるさいってことね」
-::: 
-::::::::::::::::::::::::::::::::::::
-
-
-::: {.callout-note title="ホパテの悲劇"}
-
-脳循環改善薬という古い薬をご存知でしょうか？この薬はかつて脳血管障害の後遺症や認知症などに使われ、累計8,000億円ほどの売上げがあったようです。脳循環改善薬にはいくつかの類似薬がありましたが、そのほとんどが、最初に承認されたホパンテン酸カルシウム（販売名ホパテ）と比較した「非劣性試験」を根拠に承認されていました。しかし当時行われていたのは、正式な非劣性の解析ではなく、「ホパンテン酸カルシウムと比べて有意差がない」ことにもとづいて非劣性を判定していました。1998年にホパンテン酸カルシウムは副作用のため市場から撤退しました。同時期に、厚生省（当時）は製薬企業にプラセボ対照試験による再評価を求めました。その結果、脳循環改善薬は、すべてプラセボに勝てなかったのです。この悲劇は、有意差がつかなかったとき、同等や非劣性と結論するのは間違いであることを明確に示しています。
-:::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
-p値の説明として正しいものは、次のうちどれでしょうか。
 
-1.  帰無仮説が正しい確率である
-2.  対立仮説が正しい確率である
-3.  0.05よりも小さいと有意差があると判断する
-4.  1、2、3すべて誤り
+予後がどのくらいかを説明するために、がん患者の余命を用いることがあります。胃がん手術後の余命をJCOG9502の図から読み取ることができるでしょうか。
+
+1.  図A（OSのKaplan-Meier曲線）から読み取ることができる
+2.  図B（DFSのKaplan-Meier曲線）から読み取ることができる
+3.  図AとBどちらからも読み取ることができない
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は4です**
+-   **正解は1です**
 
-有意と判断する基準（有意水準）が5%であれば3は正しいのですが、試験によっては有意水準が5%でないこともあります。実はJCOG9502では中間解析が行われていて、その結果、早期中止になったという経緯があります。一般に中間解析では、5%より低い有意水準で検定が行われます。ただし、JCOG9502が早期中止した理由は、有意差がついたからではなく、LTA群が有意に勝つ見込みがないと、効果安全性評価委員会が判断したためでした。
+胃がん手術後の余命を表す指標として、生存期間の平均値または中央値がありますが、図から読み取りやすいのは生存期間中央値です。この指標は、患者のうち50%が生存している時点のことですから、図AのSurvivalが50%になる時点に対応しています。つまりKaplan-Meier曲線が50%まで下がった時点を読み取ればよいのです。
 :::
 
 ### 文献
 
 - Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
-
-- [Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013](https://www.igaku-shoin.co.jp/book/detail/84805)
 
 ### Continuation of their story
 
