--- a/jp/clinical-trial-3.qmd
+++ b/jp/clinical-trial-3.qmd
@@ -142,329 +142,151 @@ a:hover {
 # Story and Quiz − Clinical trial III
 
 ::: serif-block
-　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, survival/competing-risk, clinical trial
+　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, p-value, survival/competing-risk, clinical trial
 :::
 
 ------------------------------------------------------------------------
 
-### お父さん、その95%信頼区間って本当に95%なの？
+### 正しくp値を解釈するための考え方
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-父「コーヒー淹れたよ」
+お父さん「JCOG9502の論文で生存曲線とp値の話をしたことがあったよね（Sasako, et al. 2006）。そのとき、気になったんだけどさ。どうしてp値が0.05より小さいと統計学的に有意って言ったの？」
 :::
 
 ::: voice-daughter
-私「ありがとう。あのさ、ちょっと気になったんだけど。“95%信頼区間（confidence interval）です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
+私「それがルールなんじゃないの？」
 :::
 
 ::: voice-father
-父「ん？そりゃ当たってるよ。仮定した確率分布が正しければね。証明もできるよ」
+お父さん「そこはね、論文の読み方を間違えてる。質問していい？論文に目を通すとき、最初にAbstract（抄録）を読むでしょ。次にどこを読む？」
 :::
 
 ::: voice-daughter
-私「ふーん。じゃあ正しいんだ。ほとんど間違わないってすごいね」
+私「Results（結果）。だってどういう結果だったかはやく知りたいもん」
 :::
 
 ::: voice-father
-父「ああ、言葉だけで95%っていわれても実感がわかないよね。じゃあ今日はRでハザード比の95%信頼区間の被覆確率（coverage）を出してみようか。シミュレーションでね」
+お父さん「うんうん、その気持ちはすごくわかる。でも、p値を見るときに限っては、正しく解釈するために、事前にMethods（方法）を読んでおく必要がある。科学コミュニティのなかで、p値について誤解が多いことが問題視されていて、アメリカ統計協会（ASA）が、統計を専門としない研究者、実務家、サイエンスライター向けの声明を出したことがある。そのきっかけは、2014年2月のASAフォーラムにこんな投稿がなされたことだった」
 :::
 
 ::: voice-daughter
-私「coverage？つまり、本当に100回に95回あたるかどうか？」
+私「なんだこの禅問答」
+:::
+
+Q. Why do so many colleges and grad schools teach p ≤ 0.05?（なぜ多くの大学、大学院で「p ≤ 0.05」と教えているのか？）
+
+A. Because that’s what the scientific community and journal editors use（なぜなら科学コミュニティと雑誌編集者が依然として0.05を使っているからである）
+
+Q. Why do so many people still use p ≤ 0.05?（なぜ多くの人々が「p ≤ 0.05」を依然として使うのか？）
+
+A. Because that’s what they were taught in college or grad school（なぜなら彼らが大学、大学院でそう教わったからである）
+
+::: {.callout-note title="統計的有意性とp値に関するASA声明"}
+
+あらゆる科学論文でp値が用いられていますが、p値が誤用されたり、研究結果の解釈に悪い影響を与えたりする弊害が指摘されています。典型的なものを挙げると、研究で小さいp値が得られると、それだけで重要な知見が得られたとみなされたり、機械的にp値が0.05より小さいというだけで意思決定がなされたりするケースは、皆さんもよく目にするのではないでしょうか。
+
+ASAは2016年に、定量的研究の実施とその解釈を改善するため、p値の適正な使用と解釈に関する6つの原則をまとめました（Wasserstein and Lazar 2016）。以下に引用します。
+
+1.  p値はデータと特定の統計モデル（訳注:仮説も統計モデルの要素の1つ）が矛盾する程度を示す指標の1つである
+2.  p値は、調べている仮説が正しい確率や、データが偶然のみで得られた確率を測るものではない
+3.  科学的な結論や、ビジネス、政策における決定は、p値がある値（訳注:有意水準）を超えたかどうかにもとづくべきではない
+4.  適正な推測のためには、すべてを報告する透明性が必要である
+5.  p値や統計的有意性は、効果の大きさや結果の重要性を意味しない
+6.  p値は、それだけでは統計モデルや仮説に関するエビデンスの、よい指標とはならない
+
+統計学の教科書では、p値と帰無仮説の関係を中心に説明しています。しかしp値を解釈するとき大切なのは、帰無仮説だけではありません。ASA声明の趣旨は、研究計画やデータの収集から結果の報告に至るまで、統計解析の背景にあるあらゆる情報を利用しなければ、p値は正しく解釈できないということです。
+
+原則4に注目してみましょう。ASA声明では、原則4の解説として「複数のデータ解析を実施して、そのうち特定のp値のみを報告することは、報告されたp値を根本的に解釈不能としてしまう」と述べています。かみ砕いて言うと、たくさんp値があると、そのなかで都合のいいp値を採用してしまいますよね。このような、いいとこどりの解析は、科学者の間で意識的にも無意識にも広く行われていて、偽陽性（false positive）の研究結果 ばかりが報告される一因ではないか、という問題意識を統計学者はもっています。この問題は、統計学で多重性（multiplicity）や選択的推論（selective inference）と呼ばれています。
 :::
 
 ::: voice-father
-父「そう。教科書の約束が、シミュレーションデータでどの程度守られているかを確かめる実験だよ。前提条件を整理しよう。2群比較の生存曲線を比べる」
+お父さん「JCOG9502論文についてもう少し説明するね。Statistical Analysis（統計解析）のところを読み返してみて。alpha error（αエラー）っていうのは、有意水準とも言うけど、どちらもp値と比べる水準のこと」
 :::
 
+After 8 years of slow accrual, the JCOG data and safety monitoring committee approved an amendment to the sample size and analysis plan. The amended sample size was 250, with one-sided alpha error of 0.1 and beta error of 0.2, with a 12-year accrual period (in total) and 8-year follow-up.（JCOG9502論文\[Sasako, et al. 2016\]の”Statistical Analysis”から抜粋）
+
 ::: voice-daughter
-私「ストーマあり群とストーマなし群ね」
+私「p値を0.1と比べるってこと？0.05じゃないの？」
 :::
 
 ::: voice-father
-父「そうだね、ストーマあり群とストーマなし群のOSを比べよう。真のハザード比は1.5、つまりストーマあり群の方が寿命が1.5倍短い。ハザード比の95%信頼区間は、1000回シミュレーションしたら、1.5を約950回は含んでいるはず」
+お父さん「登録が難航したため、苦肉の策で有意水準を0.1に緩めたみたい。本当は試験途中に有意水準は変えるべきではないんだけど、それでも重要な知見だから、こうして論文として多くの人に読まれているわけだよね」
 :::
 
 ::: voice-daughter
-私「これがcoverageね」
+私「読み飛ばしてた。自由すぎるなJCOG」
 :::
 
 ::: voice-father
-父「生存曲線の形は指数分布で決める。途中で追跡できなかった患者は打ち切り扱いになるけど、それも指数分布で発生させる。この設定だと、Coxモデルの仮定はすべて正しい。だから理論的にcoverageは95%になるはず」
+お父さん「あとさ、ASA声明の原則4を念頭に置いて、JCOG9502の図Aと図Bを見てみてよ。生存曲線が2本、p値が4つ示されているよね。この複数のp値は、どう読み解けばいいかわかる？」
+:::
+
+![](clinical-trial-1.png)
+
+
+::: voice-daughter
+私「それが知りたくて、お父さんに質問したんだけど、わかってる？図Aのp値と図Bのp値については、私もちゃんと考えてたよ。図Aの方を見ればいいんでしょ。JCOG9502の主要エンドポイントはOSで、図Aが全生存曲線だもの。でも図Aだけでも片側と両側があるじゃない。ここが意味不明で、考えこんじゃった」
+:::
+
+::: voice-father
+お父さん「それはそんなに難しくない。臨床試験で、試験治療群と標準治療群の成績を比べるとするでしょ。試験治療群が勝ったときだけ、有意差があったって宣言するのが、片側p値。どちらの群が勝っていても、統計的に有意かどうか判定するのが、両側p値だよ」
 :::
 
 ::: voice-daughter
-私「じゃあ、その通りになるかどうか、Rで確かめればいいんだね。」
+私「論文を読むと、JCOG9502のプロトコール上、LTAが試験治療、THが標準治療とされてたんだよな。LTAの方が、侵襲性が高いからかな。だからLTA群の予後がいいっていう結果でないと、有意差ありって宣言しないわけだ。これって普通？」
+:::
+
+::: voice-father
+お父さん「いや？両側p値を使うのが普通。でもJCOGが行っている臨床試験は、試験治療群の成績が、標準治療群よりいいかどうかを調べるっていうポリシーだから、片側p値を使ってる。片側p値で有意じゃなかったら、標準治療を使い続けるから、それでいいんだって。この論文の両側p値は参考値みたいだね。つまり、有効性の主たる判断には、図Aの片側p値だけが用いられることになる」
+:::
+
+::: voice-daughter
+私「ストーマ造設あり・なしと復職状況を調べる私の調査だったら、意味から考えても両側p値がおすすめってことね。よくわかりました」
 :::
 :::::::::::::::::::::::::::::::::
 
 
-::: {.callout-note title="coxph()を用いた95%信頼区間のシミュレーション"}
-ハザード比を推定する方法はいくつかありますが、もっともポピュラーなのは`survival`パッケージの`coxph()`です。以前のデモで、関数generate_data(hr1, hr2)を用いて、ストーマの有無やOSのデータを生成しました。今回は同じデータにCox回帰を当てはめ、ストーマあり群とストーマなし群のハザード比を計算してみます。この関数では、死亡ハザード比の真値はhr2という引数で指定できます。
+::: {.callout-note title="片側p値と両側p値"}
 
-```{r echo=FALSE, warning=FALSE}
-generate_data <- function(n=200, hr1, hr2) {
-  stoma <- rbinom(n, size = 1, prob = 0.4)
-  sex <- rbinom(n, size = 1, prob = 0.5)
-  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
-  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # 再発のハザード（大きいほど早く起こる）
-  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # 死亡のハザード（大きいほど早く起こる）
-  hazard_censoring <- 0.05                               # 打ち切りハザード（群に依存しない）
-  
-  t_relapse   <- rexp(n, rate = hazard_relapse)   # 再発までの潜在時間
-  t_death     <- rexp(n, rate = hazard_death)     # 死亡までの潜在時間
-  t_censoring <- rexp(n, rate = hazard_censoring) # 打ち切りまでの潜在時間
-  
-  ## --- 全生存期間（OS） ----------------------------------------
-  time_os   <- pmin(t_death, t_censoring)
-  status_os <- as.integer(t_death <= t_censoring)  # 1 = 死亡, 0 = 打ち切り
-  
-  ## --- 無再発存期間（RFS） -------------------------------------
-  time_rfs <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_rfs <- integer(n)
-  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # 再発
-  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # 死亡
-  
-  ## --- 累積再発率（CIR） + 競合リスク --------------------------
-  time_cir <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_cir <- integer(n)
-  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # イベント1: 再発
-  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # イベント2: 競合リスクとしての死亡
-  
-  ## --- データフレームにまとめる --------------------------------
-  dat <- data.frame(
-    id         = 1:n,
-    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
-    age        = age,
-    stoma      = factor(stoma, levels = c(0, 1),
-                        labels = c("WITHOUT STOMA", "WITH STOMA")),
-    time_os    = time_os,
-    status_os  = status_os,
-    time_rfs   = time_rfs,
-    status_rfs = status_rfs,
-    time_cir   = time_cir,
-    status_cir = status_cir
-  )
-}
-```
+p値と仮説検定（hypothesis test）は、研究仮説が正しいかどうかについて、二者択一の判断をするための統計手法です。なんだか難しそうなので、例え話で説明しましょう。
 
-```{r warning=FALSE}
-# install.packages("survival") #インストールが必要なら実行
-calculate_coverage <- function(model=c("coxph","finegray"), n, hr1, hr2, hr_true) {
-  set.seed(46)
-  replications=1000
-  covered <- numeric(replications)
+コイン投げをして、6回連続で表が出たとします。このコインは、イカサマコイン（表が出る確率が1/2でない）でしょうか？p値では以下のように考えます。表が出る確率は1/2という仮説の下で、6回連続で表の確率は(1/2)の6乗で0.0156ですよね。6回連続で裏の確率は同じく0.0156です。すなわち、このような極端なデータが得られる確率は、足してp=0.0312と極めて低いことが分かります。このような極端なデータが得られるのはおかしくはありませんか？従って、このコインにはイカサマがある、というのが、p値を用いて仮説（表が出る確率は1/2）を否定するときのロジックです。
 
-  for (r in seq_len(replications)) {
-    dat <- generate_data(n, hr1, hr2)
-    if (identical(model, "coxph")) {
-      fit <- coxph(Surv(time_os, status_os) ~ stoma, data = dat)
-    } else if (identical(model, "finegray")) {
-      dat$fstatus_cir <- factor(dat$status_cir,
-                                levels = 0:2,
-                                labels = c("censor",
-                                           "relapse",
-                                           "death"))
-      fgdat <- finegray(Surv(time_cir, fstatus_cir) ~ ., data=dat)
-      fit <- coxph(Surv(fgstart, fgstop, fgstatus) ~ stoma, weight=fgwt, cluster=id, data=fgdat)
-    }
-    confidence_interval <- confint(fit)
-    covered[r] <- as.integer(confidence_interval[1] <= log(hr_true) && log(hr_true) <= confidence_interval[2])
-  }
-  coverage <- mean(covered)
-  return(coverage)
-}
+片側（one-sided）p値と両側（two-sided）p値は、コインの片側（表だけ）をみるか、両側（表と裏）をみるかに、それぞれ対応しています。コイン投げの例え話でいえば、片側p値はp=0.0156、両側p値はp=0.0312です。
 
-library(survival)
-coverage_200 <- calculate_coverage(model="coxph", n=200, hr1=2, hr2=1.5, hr_true=1.5)
-print(coverage_200)
-```
-:::
+JCOG9502に戻って考えてみましょう。仮説検定では3段階の手続きを行います。まず、仮説を設定します。JCOG9502では、真実は「LTA群はTH群に比べ全生存期間を延長する効果がある」と「効果がない」の2通りがあり得ます。仮説検定では、「効果がない」という仮説に注目して、帰無仮説（null hypothesis）と呼びます（こちらが、表が出る確率が1/2に対応します）。
 
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「だいたいcoverageが95%になるっていのはわかった。でも結局、“95%信頼区間”ってどう理解すればいいの？」
-:::
+次に、帰無仮説の下でデータがどのように分布するかを調べます。仮に、同じ対象者167人の試験を1000回繰り返したと想像してみてください。仮に効果がなかったとしても、ランダム誤差のため、LTA群の生存曲線の方がよい場合もあれば、TH群の方がよい場合もあるでしょう。しかし1000回繰り返した結果は、差がないという結果を中心に分布するはずです。そこで、この1000回の分布と、実際に観察されたデータとを比べp値を計算します。
 
-::: voice-father
-お父さん「教科書的にいうとね。同じようなデータを何度も集めて、毎回95%信頼区間を作ったとき、“真の値を含む区間”の割合が0.95になるように設計された指標なんだ。これを"in the long run"の性能って言ったりする。でも、概念的に理解するよりも、シミュレーションを行った方がわかりやすいと思って」
-:::
-
-::: voice-daughter
-私「1回の研究で“この区間が当たっている確率が95%”って意味じゃないんだね」
-:::
-
-::: voice-father
-お父さん「そうだね」
-:::
-
-::: voice-daughter
-私「じゃあ、人数が100人だったどうなるの？人数が減ったら当たりにくくはならないの？」
-:::
-
-::: voice-father
-お父さん「理論的には当たりにくくなったりはしないよ。95%信頼区間の被覆確率はサンプルサイズによらず95%になるはず。n=100、200、400、800のシミュレーション結果をみてみようか」
-:::
-:::::::::::::::::::::::::::::::::
-
-```{r warning=FALSE}
-coverage_100 <- calculate_coverage(model="coxph", n=100, hr1=2, hr2=1.5, hr_true=1.5)
-coverage_400 <- calculate_coverage(model="coxph", n=400, hr1=2, hr2=1.5, hr_true=1.5)
-coverage_800 <- calculate_coverage(model="coxph", n=800, hr1=2, hr2=1.5, hr_true=1.5)
-print(coverage_100)
-print(coverage_200)
-print(coverage_400)
-print(coverage_800)
-```
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「ほんとだ、だいたい95%。じゃあ調査人数は何人でもいいってことだ」
-:::
-
-::: voice-father
-お父さん「ん？どういう意味？」
-:::
-
-::: voice-daughter
-私「がんサバイバー何人に調査票を送るかってこと。だって信頼区間の性能は人数によらないんでしょ」
-:::
-
-::: voice-father
-お父さん「あ、ごめん、誤解があったね。サンプルサイズが小さくなると、coverageは同じでも、信頼区間幅が広くなる。今のところ、何人に調査するつもりだった？」
-:::
-
-::: voice-daughter
-私「100人から調査票戻ってきたら上出来かなって思ってるけど」
-:::
-
-::: voice-father
-お父さん「やっぱり必要サンプルサイズは計算してなかったか。がんを手術した後の復職率を推定したいってことでいいの？それなら100人でギリギリだと思う」
-:::
-
-::: voice-daughter
-私「いや？前にお父さんにPECOを教えてもらったよね。あれから上司と相談して、ストーマを造設した患者の復職状況を造設しなかった患者と比べることにしたの」
-:::
-
-::: voice-father
-お父さん「そうなんだ。そうすると計算が違ってくる。100人だと足りないはず」
-:::
-
-::: voice-daughter
-私「へ？なんでそんなことわかるのよ。100人に協力してもらうのってたいへんなのよ」
-:::
-
-::: voice-father
-お父さん「どれだけサンプルサイズが必要なのかについて、統計学的な根拠に基づいて見積もる方法があるんだよ。この表をみてみて。ある書籍から借りてきたものなんだけど（Machin, et al. 2022）」
-:::
-
-表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
-
-| 割合 π | 0.05 | 0.10 | 0.15 | 0.20 |
-|--------|-----:|-----:|-----:|-----:|
-| 0.01   |  108 |   43 |   25 |   17 |
-| 0.02   |  152 |   52 |   29 |   19 |
-| 0.03   |  201 |   61 |   33 |   21 |
-| 0.04   |  252 |   72 |   37 |   23 |
-| 0.05   |  304 |   83 |   41 |   25 |
-| 0.06   |  356 |   95 |   46 |   28 |
-| 0.07   |  407 |  107 |   50 |   30 |
-| 0.08   |  458 |  118 |   55 |   32 |
-| 0.09   |  508 |  130 |   60 |   35 |
-| 0.10   |  554 |  139 |   62 |   35 |
-| 0.11   |  604 |  153 |   69 |   40 |
-| 0.12   |  651 |  164 |   74 |   42 |
-| 0.13   |  696 |  175 |   78 |   44 |
-| 0.14   |  741 |  186 |   83 |   47 |
-| 0.15   |  784 |  196 |   87 |   49 |
-| 0.16   |  826 |  206 |   92 |   51 |
-| 0.17   |  867 |  216 |   96 |   54 |
-| 0.18   |  907 |  226 |  100 |   56 |
-| 0.19   |  945 |  236 |  104 |   58 |
-| 0.20   |  982 |  245 |  108 |   60 |
-| 0.25   | 1150 |  286 |  126 |   70 |
-| 0.30   | 1288 |  320 |  141 |   78 |
-| 0.35   | 1395 |  347 |  152 |   84 |
-| 0.40   | 1472 |  366 |  161 |   89 |
-| 0.45   | 1518 |  377 |  166 |   92 |
-| 0.50   | 1533 |  381 |  167 |   93 |
-
-::: voice-father
-お父さん「たとえばなんだけどね。復職率を調べたいとするでしょ。そうすると復職率をどれくらい精確に推定できたかを表す指標が、95%信頼区間だよね。仮に復職率が50%だったとしてみよう。そうすると、50%±10%程度の推定精度がほしいよね。ここでいう±の後の数字が、95%信頼区間の幅になるんだ」
-:::
-
-::: voice-daughter
-私「ああ、”50%（95%CI 40～60%）”みたいな感じで論文に書くことになるわけだ。40〜60%の場合、95%信頼区間幅は20%ってことね」
-:::
-
-::: voice-father
-お父さん「そういうこと。表では復職率をπという変数で表しているんだけど、”π=0.5”と”信頼区間幅0.2”に対応する数字をみて。93って書いてあるでしょ。これが必要サンプルサイズ」
-:::
-
-::: voice-daughter
-私「どうだろう。復職率ってもっと高くない？手術したときの年齢にもよるけど、たとえば患者さんが50歳前後だったら、80%はいってほしいなあ」
-:::
-
-::: voice-father
-お父さん「そうなんだ。そうすると復職率80%は非復職率20%と同じことだから、”π=0.2”と”信頼区間幅0.2”のところをみればいい。サンプルサイズは60人」
-:::
-
-::: voice-daughter
-私「100人で足りてるじゃん」
-:::
-
-::: voice-father
-お父さん「いやいやいや、これは復職率の信頼区間からサンプルサイズを計算したからこうなったんだ。"信頼区間アプローチ"といって、主に探索的研究で使うものなんだよ。ストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究なら、"仮説検定アプローチ"といって、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
-:::
-
-::: voice-daughter
-私「そっか。だいたいわかった。私、明日も出勤だから、また今度教えてよ。おやすみー」
-:::
-:::::::::::::::::::::::::::::::::
-
-::: {.callout-note title="サンプルサイズ設計の2つのアプローチ"}
-研究計画を立てるときには、サンプルサイズを見積もる必要があります。サンプルサイズの計算は大まかにいえば2種類あって、信頼区間アプローチ（たとえば表1）と仮説検定アプローチ（次回）を用いることができます。
-
-信頼区間アプローチは、調査や探索的研究で用いられます。このアプローチによって割合を推定するために必要なサンプルサイズを求めるとき、次の数値を設定する必要があります。
-
--   割合の真値（復職率など）
--   信頼区間幅
-
-もうひとつの仮説検定アプローチは、臨床試験や仮説検証型の研究に適しています。このアプローチでは、以下の3つの要素が最低でも必要です。
-
--   有意水準（通常5%）
--   検出力（通常80～90%）
--   検出したい効果サイズ（2群間の生存確率の差やハザード比など）
-
-サンプルサイズ設計は、βエラーを制御するという意味で、p値と対になる統計手法といえます。
+p値とは、帰無仮説が正しい、つまり生存曲線に差がない、という仮定の下で、実際に観察された2本の生存曲線の差よりも、極端な差が観察される確率のことです。もしp値が小さければ、こんなに確率の低いことが起きるわけがない、だから生存曲線に差がないというそもそもの前提条件が間違いだ、という判断になるわけです。逆に、p値が大きければ、当たり前のことが起きたという意味になります。
 :::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-がん臨床試験では、治療からどの程度生存したかを表す指標として、生存期間中央値（median survival）を求めることがあります。これは生存時間データであるOSから計算される値です。さて、生存期間中央値を報告してよいのは、どのような場合でしょうか？
+非劣性試験や同等性試験を除くほとんどのランダム化臨床試験で、両側p値が用いられている理由として正しいものは、次のうちどれでしょうか。
 
-1.  半数以上の対象者がイベントを起こしたとき
-2.  目安としてサンプルサイズが100人以上のとき
-3.  すべての対象者が予定された追跡期間を完了したとき
-4.  1、2、3すべて誤り
+1.  試験治療が優れていたとしても、劣っていたとしても、差があるなら結論を出したいから
+2.  統計学者の間の決まりごと
+3.  世界中の臨床試験で統一した方が、混乱が少ないから
+4.  ランダム誤差は、平均の上方向と下方向の両方のばらつきを生じるから
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
--   **正解は1です**
+-   **正解は3です**
 
-柔軟に考えてみましょう。生存期間は、日数や年数のような数値データですから、連続データに近い特徴を持っています。連続データでは、中央値（median）は上位50%に相当する値のことですよね。半数以上の対象者がイベントを起こして、生存期間が確定すれば、たとえ打ち切りがあっても、生存期間中央値を求めることができます。もし、予定された追跡期間を全員が完了したとしても、イベントがじゅうぶんに観察されなければ（つまり打ち切りが多かったら）、統計的なテクニックで中央値を計算することはできますが、バイアスが生じる可能性が高くなります。
+これは歴史的経緯によるものです。1998年にICH E9ガイドラインが策定されたとき、米国、欧州、日本の規制当局で、両側p値を基本にすることが合意されました（吉村2003）。
 :::
+
 
 ### 文献
 
-- [Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022](https://www.kyoto-up.or.jp/9784814003822.html)
-
 - Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
 
-- [Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013](https://www.igaku-shoin.co.jp/book/detail/84805)
+- [Wasserstein R and Lazar NI. The ASA’s statement on p-values: Context, process, and purpose. Am Statistician 2016; 70: 129-33](日本語訳: https://www.biometrics.gr.jp)
+
+- 吉村功. 検証的臨床試験における有意水準と試験の数－「臨床試験のための統計的原則」との関連で－. 計量生物学 2003; 24: S3-9
+
 
 ### Continuation of their story
 
