--- a/jp/epidemiology-4.qmd
+++ b/jp/epidemiology-4.qmd
@@ -316,7 +316,7 @@ print(odds_ratio)
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-一般化線型モデル（田中2022）の一種であるロジスティック回帰は、「確率」ではなく「オッズ」をモデル化しており、オッズ比を求めるためによく用いられます。さて、ロジスティック回帰を用いて、リスク比を計算することができるでしょうか。
+一般化線型モデルの一種であるロジスティック回帰は、「確率」ではなく「オッズ」をモデル化しており、オッズ比を求めるためによく用いられます（田中2022）。さて、ロジスティック回帰を用いて、リスク比を計算することができるでしょうか。
 
 1.  ロジスティック回帰を用いてリスク比を計算できる
 2.  ロジスティック回帰を用いてリスク比を計算できない
