--- a/jp/clinical-trial-4.qmd
+++ b/jp/clinical-trial-4.qmd
@@ -142,319 +142,320 @@ a:hover {
 # Story and Quiz − Clinical trial IV
 
 ::: serif-block
-　　　　　　　　　　　　Keywords: sample size calculation, clinical trial, observational study
+　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, survival/competing-risk, clinical trial
 :::
 
 ------------------------------------------------------------------------
 
-### あれ？何人に調査すればいいんだろう
+### お父さん、その95%信頼区間って本当に95%なの？
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「ちょっといいかな」
+父「コーヒー淹れたよ」
 :::
 
 ::: voice-daughter
-私「なに？お父さん、真面目な顔して」
+私「ありがとう。あのさ、ちょっと気になったんだけど。“95%信頼区間（confidence interval）です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
 :::
 
 ::: voice-father
-お父さん「サンプルサイズって計算した？」
+父「ん？そりゃ当たってるよ。仮定した確率分布が正しければね。証明もできるよ」
 :::
 
 ::: voice-daughter
-私「サンプルサイズってなんのこと？」
+私「ふーん。じゃあ正しいんだ。ほとんど間違わないってすごいね」
 :::
 
 ::: voice-father
-お父さん「ほら、がんサバイバーの調査するんでしょ。その人数のこと」
+父「ああ、言葉だけで95%っていわれても実感がわかないよね。じゃあ今日はRでハザード比の95%信頼区間の被覆確率（coverage）を出してみようか。シミュレーションでね」
 :::
 
 ::: voice-daughter
-私「ああ、あれね。100人に調査するつもりだよ」
+私「coverage？つまり、本当に100回に95回あたるかどうか？」
 :::
 
 ::: voice-father
-お父さん「この前は話が中途半端だったでしょ。続きを説明したくて。前回は“精度”の話。今日は“差を見つけたいとき”の話」
+父「そう。教科書の約束が、シミュレーションデータでどの程度守られているかを確かめる実験だよ。前提条件を整理しよう。2群比較の生存曲線を比べる」
 :::
 
 ::: voice-daughter
-私「ん、わかった。サンプルサイズの話の続きね。なになに」
+私「ストーマあり群とストーマなし群ね」
 :::
 
 ::: voice-father
-お父さん「前回は信頼区間のとサンプルサイズだったよね。でも、もしストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究をしたいなら、p値や仮説検定の考え方にそってサンプルサイズを計算しないといけない」
+父「そうだね、ストーマあり群とストーマなし群のOSを比べよう。真のハザード比は1.5、つまりストーマあり群の方が寿命が1.5倍短い。ハザード比の95%信頼区間は、1000回シミュレーションしたら、1.5を約950回は含んでいるはず」
 :::
 
 ::: voice-daughter
-私「仮説検定ってp値のこと？」
+私「これがcoverageね」
 :::
 
 ::: voice-father
-お父さん「そうそう。そっちの話をするなら、p値とαエラー・βエラーの関係を説明しないとだな。この前、JCOG9502の論文もってきたとき、どこまで話したっけ？」
+父「生存曲線の形は指数分布で決める。途中で追跡できなかった患者は打ち切り扱いになるけど、それも指数分布で発生させる。この設定だと、Coxモデルの仮定はすべて正しい。だから理論的にcoverageは95%になるはず」
 :::
 
 ::: voice-daughter
-私「p値とかASA声明については聞いたよね。でも、エラーって言葉はでてこなかったな」
-:::
-
-::: voice-father
-お父さん「じゃあ、話はそこからだね。ちょっとそこのナプキンとペンをとって」
-:::
-
-::: voice-daughter
-私「ん？これのこと？」
-:::
-
-::: voice-father
-お父さん「ありがとう。αエラー・βエラーは、表にしないと説明できないからね」
-:::
-
-
-:::::::::::::::::::::::::::::::::
-
-::: {.callout-note title="αエラーとβエラー"}
-
-これまで、臨床試験JCOG9502（Sasako, et al. 2006）の文脈に沿って、片側p値と両側p値の違いも交えながら、p値について解説してきました。しかし本質的に重要なのは、p値を用いた判断に、どのような合理性があるのか、ということです。
-
-JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群はTH群に比べ全生存期間を延長する効果がある」と「効果がない」の2通りがあるといいました。一方で、試験の結果もp\<0.05とp≥0.05の2通りです。これらを組み合わせは2×2の4通りがあります。
-
-このうち、臨床試験の結果から判断を誤ってしまうケースは2つです。つまり、効果があるのにp≥0.05になってしまうケースと、効果がないのに（帰無仮説が正しいのに）p\<0.05になってしまうケースです。仮説検定では、前者をαエラー（alpha error）、後者をβエラー（beta error）と呼んでいます。また、βエラーを1から引いたものを検出力（power）と呼んでいます。
-
-| 研究結果 | 真に効果がない（帰無仮説） | 真に効果がある（対立仮説） |
-|----|----|----|
-| 有意差なし（p値≥有意水準） |  | βエラー |
-| 有意差あり（p値\<有意水準） | αエラー | 検出力=1-β |
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「まあ当たり前だよね。左開胸開腹連続切開をしたLTA群で予後がよくならないのに、有意に効いたって判断したら間違いだし、逆にいい術式なのに、結果的に有意にならなかったらそれも研究失敗だし」
-:::
-
-::: voice-father
-お父さん「そうだね。でも、正確にいうと、αエラー・βエラーは"統計学的に有意"とかp値とかとは、直接関係する概念じゃない。別に、効果があるかどうか判定する基準は、p値じゃなくてもいいわけだからね。ポイントはね、p\<0.05は、αエラーだけをコントロールする基準だってこと」
+私「じゃあ、その通りになるかどうか、Rで確かめればいいんだね。」
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note title="αエラー、βエラー、p値"}
 
-αエラーとβエラーが生じる確率を考えてみましょう。理論的に考えると、サンプルサイズが大きくなるほど、ランダム誤差は小さくなります。αエラーとβエラーも同じで、サンプルサイズが大きいほど小さくなる（判断を誤りにくくなる）性質があります。しかし、2つのエラーはトレードオフの関係にあります。サンプルサイズが一定だと、両方同時に小さくすることはできません。そこで通常は、αエラーを優先して、事前に決めた水準よりも小さく保たれるような判定方式を用います。これが仮説検定であり、事前に決めた水準のことを有意水準と呼びます。実は、p\<0.05で判定することと有意水準を5%と設定することは、同じ意味です。
+::: {.callout-note title="coxph()を用いた95%信頼区間のシミュレーション"}
+ハザード比を推定する方法はいくつかありますが、もっともポピュラーなのは`survival`パッケージの`coxph()`です。以前のデモで、関数generate_data(hr1, hr2)を用いて、ストーマの有無やOSのデータを生成しました。今回は同じデータにCox回帰を当てはめ、ストーマあり群とストーマなし群のハザード比を計算してみます。この関数では、死亡ハザード比の真値はhr2という引数で指定できます。
 
-ややこしいのですが、JCOG9502では症例登録に予定より時間がかかったため、有意水準10%、つまり全生存期間の片側p値を0.1と比べる方式が採用されました。この方式では、LTAに延命効果がなくても、100回に10回はαエラーが生じてしまい、LTAが有効と判定してしまうことになります。つまり、有意水準が5%から10%に高くなると、判断を誤る確率が増える代わりに、サンプルサイズが小さくて済むわけです。
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「ナプキンに描いてくれた表自体はわかるんだけどね。そこからαとかβとか確率とかいわれてもなあ。ついていけないな」
-:::
-
-::: voice-father
-お父さん「まずはαエラーとβエラーが臨床試験のどんな結果を表しているか考えると、イメージしやすいかもね。JCOG9502のように試験治療の有効性を検証する試験では、αエラーは標準治療と同じかそれより劣る治療方法が普及してしまうことにつながる。いわば、”αエラー=消費者リスク”といえる。一方で、βエラーは試験治療が本当は有効なのに、開発中止してしまうことを意味する。だから”βエラー=生産者リスク”といわれる。医師の視点で気になるのは、やっぱりαエラーの方だよね」
-:::
-
-::: voice-daughter
-私「理屈じゃなくて、数字の実感がないのよ。判断ミスをする確率なんて低い方がいいに決まってるよね。でもどのくらいの確率にするものなの？」
-:::
-
-::: voice-father
-お父さん「JCOG9502の論文読んだんでしょ。どう書いてあった？」
-:::
-
-::: voice-daughter
-私「はいはいみますみます。”The amended sample size was 250, with one-sided alpha error of 0.1 and beta error of 0.2”って書いてある。片側検定で、αエラー0.1、βエラー0.2ってことね。そうすると、予定変更後のサンプルサイズは250人になったんだ」
-:::
-
-::: voice-father
-お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国SWOGの統計家たちは、教科書で”新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している”って述べている（Green, et al. 2013）。検出力90%はβエラー0.1のことね」
-:::
-
-::: voice-daughter
-私「私の研究でもサンプルサイズは250人でよくない？」
-:::
-
-::: voice-father
-お父さん「雑だけどいい線いってる。大体それくらいになりそうだけど、サンプルサイズの計算結果を表にしてあげるから、ちゃんとそれをみて決めよう。いろんな状況があり得るけど、両側αエラー0.05で、βエラーは0.2（検出力0.8）と0.1（検出力0.9）という設定がもっともよく用いられるから、そのときのサンプルサイズを紹介するね。同じ人数の2つの群を比較することを想定しているから、群ごとの人数はサンプルサイズの半分になる」
-:::
-
-::: panel-tabset
-### 検出力80%
-
-表1. 2群の生存曲線を比較するためのサンプルサイズ（検出力 80%）\
-両側 α=0.05, 1−β=0.8\
-※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
-
-| π2   | π1=0.1 |  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
-|------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
-| 0.15 |    964 |    — |    — |    — |    — |    — |    — |    — |
-| 0.20 |    296 |    — |    — |    — |    — |    — |    — |    — |
-| 0.25 |    156 | 1826 |    — |    — |    — |    — |    — |    — |
-| 0.30 |    102 |  506 |    — |    — |    — |    — |    — |    — |
-| 0.35 |     74 |  246 | 2486 |    — |    — |    — |    — |    — |
-| 0.40 |     58 |  152 |  658 |    — |    — |    — |    — |    — |
-| 0.45 |     48 |  104 |  308 | 2894 |    — |    — |    — |    — |
-| 0.50 |     42 |   78 |  182 |  744 |    — |    — |    — |    — |
-| 0.55 |     36 |   62 |  122 |  340 | 3034 |    — |    — |    — |
-| 0.60 |     32 |   52 |   90 |  198 |  764 |    — |    — |    — |
-| 0.65 |     28 |   42 |   70 |  130 |  342 | 2900 |    — |    — |
-| 0.70 |     26 |   38 |   54 |   92 |  194 |  712 |    — |    — |
-| 0.75 |     24 |   34 |   38 |   70 |  124 |  312 | 2492 |    — |
-| 0.80 |     22 |   30 |   38 |   56 |   86 |  174 |  592 |    — |
-| 0.85 |     22 |   26 |   34 |   46 |   66 |  110 |  254 | 1818 |
-| 0.90 |     20 |   26 |   30 |   38 |   50 |  136 |  136 |  414 |
-
-### 検出力90%
-
-表2. 2群の生存曲線を比較するためのサンプルサイズ（検出力 90%）\
-両側 α=0.05, 1−β=0.9\
-※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
-
-| π2   | π1=0.1 |  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
-|------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
-| 0.15 |   1290 |    — |    — |    — |    — |    — |    — |    — |
-| 0.20 |    396 |    — |    — |    — |    — |    — |    — |    — |
-| 0.25 |    208 | 2444 |    — |    — |    — |    — |    — |    — |
-| 0.30 |    136 |  676 |    — |    — |    — |    — |    — |    — |
-| 0.35 |    100 |  330 | 3330 |    — |    — |    — |    — |    — |
-| 0.40 |     78 |  202 |  880 |    — |    — |    — |    — |    — |
-| 0.45 |     64 |  138 |  412 | 3876 |    — |    — |    — |    — |
-| 0.50 |     54 |  104 |  242 |  996 |    — |    — |    — |    — |
-| 0.55 |     46 |   82 |  162 |  454 | 4060 |    — |    — |    — |
-| 0.60 |     42 |   68 |  120 |  264 | 1022 |    — |    — |    — |
-| 0.65 |     38 |   56 |   90 |  172 |  456 | 3880 |    — |    — |
-| 0.70 |     34 |   48 |   72 |  124 |  258 |  952 |    — |    — |
-| 0.75 |     32 |   42 |   60 |   92 |  166 |  416 | 3336 |    — |
-| 0.80 |     30 |   40 |   52 |   74 |  116 |  232 |  796 |    — |
-| 0.85 |     28 |   34 |   46 |   60 |   88 |  146 |  338 | 2436 |
-| 0.90 |     26 |   32 |   38 |   50 |   68 |  100 |  180 |  548 |
-:::
-
-::: voice-father
-お父さん「ストーマ造設あり・なしの2群があるとして、復職率はそれぞれどれくらいになりそうなの？仮説の値でいいよ」
-:::
-
-::: voice-daughter
-私「むずいな。どのくらいなんだろう。なにも不利なことがないなら、手術した後、1年以内に80%は復職してほしいかな。ストーマがあると20%から30%くらいは復職率が下がるんじゃない？調査してみないとわかんないけどね」
-:::
-
-::: voice-father
-お父さん「なるほど。もし復職状況を生存時間データとして解析するとしたらね。復職できた時点でイベントが発生し、それ以外の患者は打ち切りになる。表1と2は、2群の生存確率を比較するためのもので、生存確率を$\pi_1$と$\pi_2$と表記している。$\pi_1$と$\pi_2$は、がんサバイバー研究でいうとグループごとの”非復職確率”に対応する。つまり復職率が80%と60%だったら、$\pi_1=0.2$と$\pi_2=0.4$になる。この数字を使うってことは、暗黙の裡に、1年間追跡することを想定してるんだけどね。表2の対応箇所をみてみてよ」
-:::
-
-::: voice-daughter
-私「202人って書いてある。これが調査しないといけない人数ってこと？」
-:::
-
-::: voice-father
-お父さん「そういうこと」
-:::
-
-::: voice-daughter
-私「もし、202人の全員が1年間で追跡できなかったらどうするの？半年までしか調査できなかったとか」
-:::
-
-::: voice-father
-お父さん「この表のサンプルサイズは、術後1年間100%追跡できるという前提で計算している。サンプルサイズの計算では、本来、それぞれの群のハザード比や生存期間中央値から必要なイベント数を求め、それを観察するために必要な期間を考慮したうえで人数を決めるんだけど、今回は、2パターンの検出力だけみればいいように状況を単純化している。さっき検出力について説明したでしょ。表2は、検出力90%の検定を行うために必要なサンプルサイズで、表1はそれを検出力80%に緩めたときのもの。表1をみると、検出力80%でよければ、152人に調査すればいいみたいだね」
-:::
-
-::: voice-daughter
-私「ふむ。まだよくわかんないな。JCOG9502では、2本の生存曲線を比べてたでしょ」
-:::
-
-::: voice-father
-お父さん「うん」
-:::
-
-::: voice-daughter
-私「いま考えてる統計解析って、ストーマ造設あり・なしと復職状況の関係を調べてたんだよね。以前に聞いた話だと、2値データだとロジスティック回帰、生存時間データだとCox回帰を使うんじゃなかったっけ。生存曲線とCox回帰は別の統計手法じゃない？」
-:::
-
-::: voice-father
-お父さん「正確にいうとね、生存曲線を比較するためのp値はいくつかの統計手法で計算できる。よく使うのはログランク検定とCox回帰のふたつで、表1と2は、ほんとはログランク検定用なんだけど。Cox回帰を使ったとしても、ストーマ造設あり・なし以外の因子がなければ、ログランク検定とほとんど同じ結果になる。特にサンプルサイズが大きければね」
-:::
-
-::: voice-daughter
-私「お父さん、あとね。表1と2に割付け比1:1って書いてあるでしょ。これって2群の人数が同じってことだよね」
-:::
-
-::: voice-father
-お父さん「そうだよ、たいていの臨床試験の割付け比は1:1だからね」
-:::
-
-::: voice-daughter
-私「でもストーマ保有者って、非保有者より少ないと思うんだけど。半数くらいかな」
-:::
-
-::: voice-father
-お父さん「調査や観察研究だと、群ごとの人数は同じにならないよね。さっきは、書籍（Machin, et al. 2022）の表を利用させてもらったんだけど、設定が複雑になると、付録のソフトウェアやRを利用することになる。
-powerSurvEpiパッケージで、あの表とほぼ同じ計算ができるはず。割付け比を、1:1から2:1、4:1に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう」
-:::
-
-:::::::::::::::::::::::::::::::::
-
-::: {.callout-note title="Rパッケージを用いたサンプルサイズ設計"}
+```{r echo=FALSE, warning=FALSE}
+generate_data <- function(n=200, hr1, hr2) {
+  stoma <- rbinom(n, size = 1, prob = 0.4)
+  sex <- rbinom(n, size = 1, prob = 0.5)
+  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
+  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # 再発のハザード（大きいほど早く起こる）
+  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # 死亡のハザード（大きいほど早く起こる）
+  hazard_censoring <- 0.05                               # 打ち切りハザード（群に依存しない）
+  
+  t_relapse   <- rexp(n, rate = hazard_relapse)   # 再発までの潜在時間
+  t_death     <- rexp(n, rate = hazard_death)     # 死亡までの潜在時間
+  t_censoring <- rexp(n, rate = hazard_censoring) # 打ち切りまでの潜在時間
+  
+  ## --- 全生存期間（OS） ----------------------------------------
+  time_os   <- pmin(t_death, t_censoring)
+  status_os <- as.integer(t_death <= t_censoring)  # 1 = 死亡, 0 = 打ち切り
+  
+  ## --- 無再発存期間（RFS） -------------------------------------
+  time_rfs <- pmin(t_relapse, t_death, t_censoring)
+  
+  status_rfs <- integer(n)
+  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # 再発
+  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # 死亡
+  
+  ## --- 累積再発率（CIR） + 競合リスク --------------------------
+  time_cir <- pmin(t_relapse, t_death, t_censoring)
+  
+  status_cir <- integer(n)
+  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # イベント1: 再発
+  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # イベント2: 競合リスクとしての死亡
+  
+  ## --- データフレームにまとめる --------------------------------
+  dat <- data.frame(
+    id         = 1:n,
+    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
+    age        = age,
+    stoma      = factor(stoma, levels = c(0, 1),
+                        labels = c("WITHOUT STOMA", "WITH STOMA")),
+    time_os    = time_os,
+    status_os  = status_os,
+    time_rfs   = time_rfs,
+    status_rfs = status_rfs,
+    time_cir   = time_cir,
+    status_cir = status_cir
+  )
+}
+```
 
 ```{r warning=FALSE}
-# install.packages("powerSurvEpi") #インストールが必要なら実行
-library(powerSurvEpi)
+# install.packages("survival") #インストールが必要なら実行
+calculate_coverage <- function(model=c("coxph","finegray"), n, hr1, hr2, hr_true) {
+  set.seed(46)
+  replications=1000
+  covered <- numeric(replications)
 
-ssizeCT.default(
-  power = 0.9,
-  k     = 1,
-  pE    = 0.6,                     # ストーマあり群の復職率
-  pC    = 0.8,                     # ストーマなし群の復職率
-  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
-  alpha = 0.05
-)
-ssizeCT.default(
-  power = 0.9,
-  k     = 0.5,
-  pE    = 0.6,                     # ストーマあり群の復職率
-  pC    = 0.8,                     # ストーマなし群の復職率
-  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
-  alpha = 0.05
-)
-ssizeCT.default(
-  power = 0.9,
-  k     = 0.25,
-  pE    = 0.6,                     # ストーマあり群の復職率
-  pC    = 0.8,                     # ストーマなし群の復職率
-  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
-  alpha = 0.05
-)
+  for (r in seq_len(replications)) {
+    dat <- generate_data(n, hr1, hr2)
+    if (identical(model, "coxph")) {
+      fit <- coxph(Surv(time_os, status_os) ~ stoma, data = dat)
+    } else if (identical(model, "finegray")) {
+      dat$fstatus_cir <- factor(dat$status_cir,
+                                levels = 0:2,
+                                labels = c("censor",
+                                           "relapse",
+                                           "death"))
+      fgdat <- finegray(Surv(time_cir, fstatus_cir) ~ ., data=dat)
+      fit <- coxph(Surv(fgstart, fgstop, fgstatus) ~ stoma, weight=fgwt, cluster=id, data=fgdat)
+    }
+    confidence_interval <- confint(fit)
+    covered[r] <- as.integer(confidence_interval[1] <= log(hr_true) && log(hr_true) <= confidence_interval[2])
+  }
+  coverage <- mean(covered)
+  return(coverage)
+}
+
+library(survival)
+coverage_200 <- calculate_coverage(model="coxph", n=200, hr1=2, hr2=1.5, hr_true=1.5)
+print(coverage_200)
 ```
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「割付け比Kが1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（nE+nC）は100+100人から19+118人、41+161人に変化するみたいだね」
+::: voice-daughter
+私「だいたいcoverageが95%になるっていのはわかった。でも結局、“95%信頼区間”ってどう理解すればいいの？」
 :::
 
+::: voice-father
+お父さん「教科書的にいうとね。同じようなデータを何度も集めて、毎回95%信頼区間を作ったとき、“真の値を含む区間”の割合が0.95になるように設計された指標なんだ。これを"in the long run"の性能って言ったりする。でも、概念的に理解するよりも、シミュレーションを行った方がわかりやすいと思って」
+:::
 
 ::: voice-daughter
-私「えー、サンプルサイズが思ったより増えちゃった。調査する施設を増やすかどうか考えないと」
+私「1回の研究で“この区間が当たっている確率が95%”って意味じゃないんだね」
 :::
 
 ::: voice-father
-お父さん「気持ちはわかるよ。真剣に研究をデザインすると、だいたい最初は“そんなに集められないよ”って顔になるからね」
+お父さん「そうだね」
+:::
+
+::: voice-daughter
+私「じゃあ、人数が100人だったどうなるの？人数が減ったら当たりにくくはならないの？」
+:::
+
+::: voice-father
+お父さん「理論的には当たりにくくなったりはしないよ。95%信頼区間の被覆確率はサンプルサイズによらず95%になるはず。n=100、200、400、800のシミュレーション結果をみてみようか」
 :::
 :::::::::::::::::::::::::::::::::
 
+```{r warning=FALSE}
+coverage_100 <- calculate_coverage(model="coxph", n=100, hr1=2, hr2=1.5, hr_true=1.5)
+coverage_400 <- calculate_coverage(model="coxph", n=400, hr1=2, hr2=1.5, hr_true=1.5)
+coverage_800 <- calculate_coverage(model="coxph", n=800, hr1=2, hr2=1.5, hr_true=1.5)
+print(coverage_100)
+print(coverage_200)
+print(coverage_400)
+print(coverage_800)
+```
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ほんとだ、だいたい95%。じゃあ調査人数は何人でもいいってことだ」
+:::
+
+::: voice-father
+お父さん「ん？どういう意味？」
+:::
+
+::: voice-daughter
+私「がんサバイバー何人に調査票を送るかってこと。だって信頼区間の性能は人数によらないんでしょ」
+:::
+
+::: voice-father
+お父さん「あ、ごめん、誤解があったね。サンプルサイズが小さくなると、coverageは同じでも、信頼区間幅が広くなる。今のところ、何人に調査するつもりだった？」
+:::
+
+::: voice-daughter
+私「100人から調査票戻ってきたら上出来かなって思ってるけど」
+:::
+
+::: voice-father
+お父さん「やっぱり必要サンプルサイズは計算してなかったか。がんを手術した後の復職率を推定したいってことでいいの？それなら100人でギリギリだと思う」
+:::
+
+::: voice-daughter
+私「いや？前にお父さんにPECOを教えてもらったよね。あれから上司と相談して、ストーマを造設した患者の復職状況を造設しなかった患者と比べることにしたの」
+:::
+
+::: voice-father
+お父さん「そうなんだ。そうすると計算が違ってくる。100人だと足りないはず」
+:::
+
+::: voice-daughter
+私「へ？なんでそんなことわかるのよ。100人に協力してもらうのってたいへんなのよ」
+:::
+
+::: voice-father
+お父さん「どれだけサンプルサイズが必要なのかについて、統計学的な根拠に基づいて見積もる方法があるんだよ。この表をみてみて。ある書籍から借りてきたものなんだけど（Machin, et al. 2022）」
+:::
+
+表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
+
+| 割合 π | 0.05 | 0.10 | 0.15 | 0.20 |
+|--------|-----:|-----:|-----:|-----:|
+| 0.01   |  108 |   43 |   25 |   17 |
+| 0.02   |  152 |   52 |   29 |   19 |
+| 0.03   |  201 |   61 |   33 |   21 |
+| 0.04   |  252 |   72 |   37 |   23 |
+| 0.05   |  304 |   83 |   41 |   25 |
+| 0.06   |  356 |   95 |   46 |   28 |
+| 0.07   |  407 |  107 |   50 |   30 |
+| 0.08   |  458 |  118 |   55 |   32 |
+| 0.09   |  508 |  130 |   60 |   35 |
+| 0.10   |  554 |  139 |   62 |   35 |
+| 0.11   |  604 |  153 |   69 |   40 |
+| 0.12   |  651 |  164 |   74 |   42 |
+| 0.13   |  696 |  175 |   78 |   44 |
+| 0.14   |  741 |  186 |   83 |   47 |
+| 0.15   |  784 |  196 |   87 |   49 |
+| 0.16   |  826 |  206 |   92 |   51 |
+| 0.17   |  867 |  216 |   96 |   54 |
+| 0.18   |  907 |  226 |  100 |   56 |
+| 0.19   |  945 |  236 |  104 |   58 |
+| 0.20   |  982 |  245 |  108 |   60 |
+| 0.25   | 1150 |  286 |  126 |   70 |
+| 0.30   | 1288 |  320 |  141 |   78 |
+| 0.35   | 1395 |  347 |  152 |   84 |
+| 0.40   | 1472 |  366 |  161 |   89 |
+| 0.45   | 1518 |  377 |  166 |   92 |
+| 0.50   | 1533 |  381 |  167 |   93 |
+
+::: voice-father
+お父さん「たとえばなんだけどね。復職率を調べたいとするでしょ。そうすると復職率をどれくらい精確に推定できたかを表す指標が、95%信頼区間だよね。仮に復職率が50%だったとしてみよう。そうすると、50%±10%程度の推定精度がほしいよね。ここでいう±の後の数字が、95%信頼区間の幅になるんだ」
+:::
+
+::: voice-daughter
+私「ああ、”50%（95%CI 40～60%）”みたいな感じで論文に書くことになるわけだ。40〜60%の場合、95%信頼区間幅は20%ってことね」
+:::
+
+::: voice-father
+お父さん「そういうこと。表では復職率をπという変数で表しているんだけど、”π=0.5”と”信頼区間幅0.2”に対応する数字をみて。93って書いてあるでしょ。これが必要サンプルサイズ」
+:::
+
+::: voice-daughter
+私「どうだろう。復職率ってもっと高くない？手術したときの年齢にもよるけど、たとえば患者さんが50歳前後だったら、80%はいってほしいなあ」
+:::
+
+::: voice-father
+お父さん「そうなんだ。そうすると復職率80%は非復職率20%と同じことだから、”π=0.2”と”信頼区間幅0.2”のところをみればいい。サンプルサイズは60人」
+:::
+
+::: voice-daughter
+私「100人で足りてるじゃん」
+:::
+
+::: voice-father
+お父さん「いやいやいや、これは復職率の信頼区間からサンプルサイズを計算したからこうなったんだ。"信頼区間アプローチ"といって、主に探索的研究で使うものなんだよ。ストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究なら、"仮説検定アプローチ"といって、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
+:::
+
+::: voice-daughter
+私「そっか。だいたいわかった。私、明日も出勤だから、また今度教えてよ。おやすみー」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note title="サンプルサイズ設計の2つのアプローチ"}
+研究計画を立てるときには、サンプルサイズを見積もる必要があります。サンプルサイズの計算は大まかにいえば2種類あって、信頼区間アプローチ（たとえば表1）と仮説検定アプローチ（次回）を用いることができます。
+
+信頼区間アプローチは、調査や探索的研究で用いられます。このアプローチによって割合を推定するために必要なサンプルサイズを求めるとき、次の数値を設定する必要があります。
+
+-   割合の真値（復職率など）
+-   信頼区間幅
+
+もうひとつの仮説検定アプローチは、臨床試験や仮説検証型の研究に適しています。このアプローチでは、以下の3つの要素が最低でも必要です。
+
+-   有意水準（通常5%）
+-   検出力（通常80～90%）
+-   検出したい効果サイズ（2群間の生存確率の差やハザード比など）
+
+サンプルサイズ設計は、βエラーを制御するという意味で、p値と対になる統計手法といえます。
+:::
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
-片側検定のp値から、両側検定によるp値を計算するにはどうすればよいでしょうか？
+がん臨床試験では、治療からどの程度生存したかを表す指標として、生存期間中央値（median survival）を求めることがあります。これは生存時間データであるOSから計算される値です。さて、生存期間中央値を報告してよいのは、どのような場合でしょうか？
 
-1.  片側検定のp値を2倍する
-2.  片側検定のp値を2で割る
-3.  計算できない
+1.  半数以上の対象者がイベントを起こしたとき
+2.  目安としてサンプルサイズが100人以上のとき
+3.  すべての対象者が予定された追跡期間を完了したとき
 4.  1、2、3すべて誤り
 :::
 
 ::: {.callout-note collapse="true" title="答えはこちら"}
-- **正解は1です**
+-   **正解は1です**
 
-コイン投げの例え話を思い出してください。片側（one-sided）p値と両側（two-sided）p値は、コインの片側（表だけ）をみるか、両側（表と裏）をみるかに、それぞれ対応していましたよね。実際、計算された片側p値はp=0.0156、両側p値はp=0.0312でした。つまり、両側p値は、片側p値を2倍することで、求めることができます。
+柔軟に考えてみましょう。生存期間は、日数や年数のような数値データですから、連続データに近い特徴を持っています。連続データでは、中央値（median）は上位50%に相当する値のことですよね。半数以上の対象者がイベントを起こして、生存期間が確定すれば、たとえ打ち切りがあっても、生存期間中央値を求めることができます。もし、予定された追跡期間を全員が完了したとしても、イベントがじゅうぶんに観察されなければ（つまり打ち切りが多かったら）、統計的なテクニックで中央値を計算することはできますが、バイアスが生じる可能性が高くなります。
 :::
 
 ### 文献
@@ -462,6 +463,8 @@ ssizeCT.default(
 - [Machin D, Campbell MJ, Tan SB, Tan SH. 医学のためのサンプルサイズ設計（原著第4版）. 京都: 京都大学学術出版会; 2022](https://www.kyoto-up.or.jp/9784814003822.html)
 
 - Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
+
+- [Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013](https://www.igaku-shoin.co.jp/book/detail/84805)
 
 ### Continuation of their story
 
