--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -373,35 +373,23 @@ summary(fit)
 
 [Study design V](study-design-5.qmd)
 
-[Study design I](study-design-1.qmd)
+[Clinical trial I](clinical-trial-1.qmd)
 
-[Study design II](study-design-2.qmd)
+[Clinical trial II](clinical-trial-2.qmd)
 
-[Study design III](study-design-3.qmd)
+[Clinical trial III](clinical-trial-3.qmd)
 
-[Study design IV](study-design-4.qmd)
+[Clinical trial IV](clinical-trial-4.qmd)
 
-[Study design V](study-design-5.qmd)
+[Epidemiology I](epidemiology-1.qmd)
 
-[Frequentist thinking I](frequentist-1.qmd)
+[Epidemiology II](epidemiology-2.qmd)
 
-[Frequentist thinking II](frequentist-2.qmd)
+[Epidemiology III](epidemiology-3.qmd)
 
-[Frequentist thinking III](frequentist-3.qmd)
+[Epidemiology IV](epidemiology-4.qmd)
 
-[Frequentist thinking IV](frequentist-4.qmd)
-
-[Frequentist thinking V](frequentist-5.qmd)
-
-[Effects and time I](effects-1.qmd)
-
-[Effects and time II](effects-2.qmd)
-
-[Effects and time III](effects-3.qmd)
-
-[Effects and time IV](effects-4.qmd)
-
-[Effects and time V](effects-5.qmd)
+[Epidemiology V](epidemiology-5.qmd)
 
 [Regression I](logistic-regression-1.qmd)
 
