--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -370,6 +370,20 @@ summary(rr_at_20)
 ハザード比は一定の下でデータを生成していますが、時間が経つにつれリスク比は小さく推定されることがわかります。冒頭のKaplan-Meier曲線もあわせてみてみてください。
 :::
 
+::: voice-daughter
+私「時間と効果って、分けて考えられないんだね」
+:::
+
+::: voice-father
+父「だってそうでしょ？効果って時間とともに生じるものだもの。それが因果の定義のひとつでもある」
+:::
+
+::: voice-daughter
+私「確かに。生存曲線を見るっていうのは、効果を表す数字に、時間の視点を加えるってことなんだね」
+:::
+
+
+
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
 Kaplan-Meier法による生存曲線の推定が妥当な状況として正しいのは、次のうちどれでしょうか。
