--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -163,11 +163,19 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「うん、ホットコーヒーあったまるよね。そういえばこの前出たワクチンってすごいね。有効率98%だって」
+私「うん、ホットコーヒーあったまるよね。そういえばこの前出たワクチンについてなんだけどね。外来で"有効率98%"って患者さんに聞かれたんだけど、こういう統計って私もちょっと混乱するんだよね」
 :::
 
 ::: voice-father
-お父さん「そうだね。でもさ、ワクチンの有効率って意外と計算が難しいんだよ。プラセボに比べてって意味だから」
+お父さん「うん、あれは話題になったよね。ワクチンの有効率って意外と計算が難しいんだよ。まず"率"って用語には要注意だね」
+:::
+
+::: voice-daughter
+私「そう？罹患率とか死亡率とかよく使うけど」
+:::
+
+::: voice-father
+お父さん「それとは別。うん、そこは日本語特有の言い回しだから間違えやすいよね。この場合の率は百分率の意味で使っているんだけど、疫学でいう率（rate）とは計算が違うんだ。ややこしいのはそこだけじゃない。この場合の98%は、プラセボに比べて発症リスクが98%って意味だから」
 :::
 
 ::: voice-daughter
@@ -175,13 +183,13 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思う。ちょっとナプキンとペンとって。式で書きたい」
+お父さん「違う違う。プラセボの効果との相対比較。プラセボを打ったときに比べ、どのくらい感染を予防できるっていう意味のパーセントなんだ。論文ではともかく日常会話ではほとんど誤解されて伝わっちゃう。"リスク"までさかのぼらないと、わからないと思う。ちょっと、そこにある紙ナプキンとペンをとって。式で書いてあげるよ。いくつか疫学の指標を書くけど、“98%という数字はどのリスクとどのリスクをどう比べているのか”だけが、はっきりすればいい。そのためには、こういう分割表で集計したデータを頭に浮かべられるといい」
 :::
 
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="リスクを比較するための基本的な指標"}
-医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。割合を理解するための最初のステップは、分割表で集計したデータをイメージすることです。
+医学では分野によってさまざまな指標が用いられており、特に割合を比較する指標にはわかりにくいものが少なくありません。割合を理解するための最初のステップは分割表です。
 
 |          | 群1 | 群2 |
 |----------|-----|-----|
@@ -206,7 +214,7 @@ a:hover {
 これらの指標を使うときは、どちらの群を基準に比較しているかを意識することが大切です。上の式では群2を基準にとっています。
 :::
 
-::: {.callout-note title="治療後のリスクを比較するための指標"}
+::: {.callout-note title="治療の有効性を比較するための指標"}
 特に、2種類の治療のどちらが有効か調べるために比較するケースでは、以下の指標もよく用いられます。どちらの指標でも$\pi_2>\pi_1$と想定されています。ワクチン有効率では、群2はプラセボを受けていると考えてください。
 
 -   Number needed to treat（NNT）
@@ -220,7 +228,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「へー、ワクチン有効率はイメージしてたパーセントじゃないね。リスク比をちょっといじっただけじゃない。でも、"有効率"っていわれたり、パーセントが単位だと、いわゆる割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
+私「へー、ワクチン有効率はイメージしてたパーセントじゃないね。リスク比をちょっといじっただけの式じゃない。でも、"有効率"っていわれたり、パーセントが単位だと、いわゆる割合と思いがちだよね。お父さんって、頭の中にいつもこんな計算式があるの？いきなり式が出てくると違和感あるなあ。統計学と医学ってだいぶ雰囲気が違うね」
 :::
 
 ::: voice-father
