--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -151,11 +151,11 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さんさ、以前聞いた寄与割合の話を思い返して気づいたんだけどね。またわからないことがあるんだ」
+私「お父さんさ、以前聞いた寄与割合の話を思い返して気づいたんだけどね。まだ納得感が足りないの」
 :::
 
 ::: voice-father
-お父さん「なに？」
+お父さん「なに？コーヒーと一緒にこういう話をするのは歓迎だよ」
 :::
 
 ::: voice-daughter
@@ -179,14 +179,13 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「えーっと、リスク比が変化しないわけじゃなくて...。ちょっとナプキンとペンをとってくれる？教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
+お父さん「えーっと、リスク比が変化しないわけじゃなくて...。ちょっと紙ナプキンとペンをとってくれる？教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
 :::
 :::::::::::::::::::::::::::::::::
 
-
-
 ::: {.callout-note title="生存曲線とハザードの関係"}
-Kaplan-Meier曲線もまた、割合の一種と考えることができますが、見え方がずいぶん違います。つまり、Kaplan-Meier曲線はグラフですし、時間の概念が含まれたりします。さらに、Kaplan-Meier曲線は、そもそも2値データではなく生存時間データに用いられる手法ですし、ハザード比との関係が重要です。ここでは、ハザードが時間を通じて一定という単純な状況で、そのあたりを整理しましょう。
+
+これまでのエピソードでは、ある時点までのリスクを扱ってきましたが、今度は“時間に沿って変化するリスク”を推定したKaplan-Meier曲線について正式に説明します。Kaplan-Meier曲線は、そもそも2値データではなく生存時間データに用いられる手法でした。そのため、Kaplan-Meier曲線は時間軸を横にとったグラフですし、いわゆるハザード比との関係も知りたいところですよね。ここでは、ハザードが時間を通じて一定という単純な状況で、そのあたりを整理しましょう。
 
 Kaplan-Meier曲線は、生存時間データから計算された推定値を、時間軸（$x$軸）に沿ってグラフにしたものです。これを数式で書くなら、「生存曲線を時間$x$の関数$S(x)$で表す」ということになります。
 
@@ -279,7 +278,7 @@ $0.5=\mathrm{exp}(-\lambda M)$
 
 と関係が成り立つので、生存時間中央値$M$は、ハザード$λ$から以下のように計算することができます。
 
-$M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
+$M = \frac{\log 2}{\lambda} \approx \frac{0.7}{\lambda}$
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
@@ -288,7 +287,7 @@ $M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
 :::
 
 ::: voice-father
-お父さん「そうだね、指数分布の下で計算すると、だけどね。ハザード比は、まさにハザードの比をとることで、2つの集団の生存曲線を比較する指標なんだ」
+お父さん「そうだね、たとえるならハザードはコーヒーにとっての気温みたいなもの。寒いとコーヒーが覚める時間が短くなる。これがハザードが高いってこと。正確に逆数になるのは、指数分布の下で計算するときだけどね。ハザード比は、まさにハザードの比をとったものだよ。2つの集団の生存曲線を比較するときに使う」
 :::
 ::::::::::::::::::::::::::::::::: 
 
@@ -301,7 +300,7 @@ $M=\frac{\mathrm{log}(0.5)}{\lambda}\approx\frac{0.7}{\lambda}$
 
 -   ハザード比（指数分布を仮定）
 
-    $HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(\pi_1)}{\mathrm{log}(\pi_2)}$
+    $HR=\frac{\lambda_1}{\lambda_2}=\frac{M_2}{M_1}=\frac{\mathrm{log}(1-\pi_1)}{\mathrm{log}(1-\pi_2)}$
 
 指数分布では、ハザードは時間を通じて一定でした。その一方で、Cox比例ハザードモデルでは、ハザードを時間の関数$\lambda_1(x)$と$\lambda_2(x)$と考え、しかも両者が比例関係にあると仮定します。
 
@@ -370,17 +369,19 @@ summary(rr_at_20)
 ハザード比は一定の下でデータを生成していますが、時間が経つにつれリスク比は小さく推定されることがわかります。冒頭のKaplan-Meier曲線もあわせてみてみてください。
 :::
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「時間と効果って、分けて考えられないんだね」
 :::
 
 ::: voice-father
-父「だってそうでしょ？効果って時間とともに生じるものだもの。それが因果の定義のひとつでもある」
+お父さん「だってそうでしょ？効果って時間とともに生じるものだもの。それが因果の定義のひとつでもある」
 :::
 
 ::: voice-daughter
 私「確かに。生存曲線を見るっていうのは、効果を表す数字に、時間の視点を加えるってことなんだね」
 :::
+:::::::::::::::::::::::::::::::::
 
 
 
