--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -440,7 +440,7 @@ ssizeCT.default(
 :::
 
 ::: voice-daughter
-私「でも、サンプルサイズの意味がわかったから、しょうがないやるかって思ったよ。シミュレーションで失敗しちゃった調査が、私の調査だったらきっついもん。調査の繰り返したときのことをイメージできると、研究が俯瞰的に見えてくるね」
+私「でも、サンプルサイズの意味がわかったから、しょうがないやるかって思ったよ。シミュレーション1000回のうち失敗しちゃった調査が、私の調査だったらきっついもん。ひとつの調査を繰り返したときのことをイメージできると、統計的に価値の高い研究とはなにかが見えてくるね」
 :::
 :::::::::::::::::::::::::::::::::
 
