--- a/jp/frequentist-1.qmd
+++ b/jp/frequentist-1.qmd
@@ -158,8 +158,12 @@ a:hover {
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+父「ん？遅くまでなに読んでるの？コーヒーでも淹れようか」
+:::
+
 ::: voice-daughter
-私「お父さん、いま時間ある？前に全生存期間（OS）と無病生存期間（DFS）の違いについて教えてくれたでしょ」
+私「あ、お父さん、ありがと。ミルクもお願い。いまね、胃がん手術の論文読んでるんだ。そうだ、前に全生存期間（OS）と無病生存期間（DFS）の違いについて教えてくれたでしょ」
 :::
 
 ::: voice-father
@@ -167,7 +171,15 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「真面目に論文を読んでるんだけど、細かいところがよくわかんないんだ。特に統計っぽい言葉の意味がね。ちょっとこの図を見てよ。JCOG9502っていう胃がん手術の術式を比べた臨床試験の論文なの（Sasako, et al. 2006）。TH群は開腹創から下縦隔へアプローチする標準的な手術を受けた患者、LTA群は左開胸開腹連続切開によって下縦隔郭清も行った患者のことね」
+私「お父さんも臨床論文読んだりする？仕事で」
+:::
+
+::: voice-father
+お父さん「臨床試験の統計家やってるから、たまにね。どっちかっていうと、論文を書くことの方が多いけど。臨床の最新知識はそこまで仕事で要らないし」
+:::
+
+::: voice-daughter
+私「よかった。この論文、細かいところがよくわかんないんだ。特に統計っぽい言葉の意味がね。ちょっとこの図を見てよ。JCOG9502っていう胃がん手術の術式を比べた臨床試験の論文なの（Sasako, et al. 2006）。TH群は開腹創から下縦隔へアプローチする標準的な手術を受けた患者、LTA群は左開胸開腹連続切開によって下縦隔郭清も行った患者のことね」
 :::
 
 ![](clinical-trial-1.png)
@@ -217,25 +229,21 @@ a:hover {
 :::
 
 ::: voice-daughter
-私「図では、3年以内のひげは数えるほどしかない。じゃあほとんどの患者は3年以上追跡できたんだ。いい研究なんだね」
+私「図では、3年以内のひげは数えるほどしかない。じゃあほとんどの患者は3年以上追跡できたんだ。いい研究なんだね。今までの話をまとめると、こういうことか」
+:::
 
 -   アットリスク数は時点ごとの人数を表す
 -   ひげは打ち切りを表す
 -   図に示されない情報だが登録期間・追跡期間も要確認
-:::
 
 ::: voice-daughter
-私「あとさ、図に書かれている英語についてなんだけど、”hazard ratio”、”95% CI”、”one-sided p”、”two-sided p”は日本語でなんていうか教えてよ」
+私「よく考えたら10年以上かかったんだ、この図を描くのに。スタッフは大変だっただろうな。あ、あとさ、生存曲線まわりの英語についてなんだけど、”hazard ratio”、”95% CI”、”one-sided p”、”two-sided p”は日本語でなんていうか教えてよ」
 :::
 
 ::: voice-father
-お父さん「ハザード比、95%信頼区間、片側p値、両側p値かな。このあたりの指標は、生存時間解析の定番だよ。ハザード比、95%信頼区間、両側p値は、Cox回帰という回帰モデルを当てはめて推定する。片側p値は手で計算する必要があるけど」
+お父さん「ハザード比、95%信頼区間、片側p値、両側p値かな。このあたりの指標は、生存時間解析の定番だよ。ハザード比とかp値は、Cox回帰で計算するんだけど、本格的な話は、また今度ゆっくりやろうか」
 :::
-
-::: voice-daughter
-私「ふむふむ。こういうの同僚の研究でもよく出てくるんだ、ハザード比とか。もう少し詳しく知りたいな」
-:::
-
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note title="このエピソードに関係するクイズです"}
 
